Code/syntax.output
Terminals unused in grammar

   DOUBLE


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | error RC

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | error RB
   13           | error ID

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT error RC

   19 OptTag: ID
   20       | %empty

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | error RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec
   29        | error RB
   30        | error ID

   31 ParamDec: Specifier VarDec

   32 CompSt: LC DefList StmtList RC
   33       | error RC

   34 StmtList: Stmt StmtList
   35         | %empty

   36 Stmt: Exp SEMI
   37     | CompSt
   38     | RETURN Exp SEMI
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | error SEMI

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT
   69    | LP error RP
   70    | Exp LB error RB
   71    | ID LP error RP

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 9 12 13 18 26 29 30 33 42 46 69 70 71
INT (258) 23 67
FLOAT (259) 68
DOUBLE (260)
ID (261) 13 19 21 22 24 25 30 62 63 65 66 71
SEMI (262) 4 5 7 8 36 38 42 45 46
COMMA (263) 11 27 48 72
ASSIGNOP (264) 50 51
PLUS (265) 55
MINUS (266) 56 60
STAR (267) 57
DIV (268) 58
AND (269) 52
OR (270) 53
DOT (271) 65
NOT (272) 61
LP (273) 24 25 39 40 41 59 62 63 69 71
RP (274) 24 25 26 39 40 41 59 62 63 69 71
LB (275) 23 64 70
RB (276) 12 23 29 64 70
LC (277) 16 32
RC (278) 9 16 18 32 33
RELOP (279) 54
TYPE (280) 14
STRUCT (281) 16 17 18
RETURN (282) 38
IF (283) 39 40
ELSE (284) 40
WHILE (285) 41
UMINUS (286)
LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 2
ExtDef (36)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (37)
    on left: 10 11 12 13, on right: 4 11
Specifier (38)
    on left: 14 15, on right: 4 5 6 7 31 45 46
StructSpecifier (39)
    on left: 16 17 18, on right: 15
OptTag (40)
    on left: 19 20, on right: 16
Tag (41)
    on left: 21, on right: 17
VarDec (42)
    on left: 22 23, on right: 10 11 23 31 49 50
FunDec (43)
    on left: 24 25 26, on right: 6 7
VarList (44)
    on left: 27 28 29 30, on right: 24 27
ParamDec (45)
    on left: 31, on right: 27 28
CompSt (46)
    on left: 32 33, on right: 6 37
StmtList (47)
    on left: 34 35, on right: 32 34
Stmt (48)
    on left: 36 37 38 39 40 41 42, on right: 34 39 40 41
DefList (49)
    on left: 43 44, on right: 16 32 43
Def (50)
    on left: 45 46, on right: 43
DecList (51)
    on left: 47 48, on right: 45 48
Dec (52)
    on left: 49 50, on right: 47 48
Exp (53)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71, on right: 36 38 39 40 41 50 51 52 53 54 55 56 57 58 59
    60 61 64 65 70 72 73
Args (54)
    on left: 72 73, on right: 62 72


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . SEMI
    9       | error . RC

    SEMI  shift, and go to state 9
    RC    shift, and go to state 10


State 2

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag
   18                | STRUCT . error RC

    error  shift, and go to state 11
    ID     shift, and go to state 12

    LC  reduce using rule 20 (OptTag)

    OptTag  go to state 13
    Tag     go to state 14


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 16
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 17
    ID     shift, and go to state 18
    SEMI   shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 8

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

    9 ExtDef: error RC .

    $default  reduce using rule 9 (ExtDef)


State 11

   18 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 23


State 12

   19 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 13

   16 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 24


State 14

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 17

   12 ExtDecList: error . RB
   13           | error . ID
   26 FunDec: error . RP

    ID  shift, and go to state 25
    RP  shift, and go to state 26
    RB  shift, and go to state 27


State 18

   22 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP

    LP  shift, and go to state 28

    $default  reduce using rule 22 (VarDec)


State 19

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 29


State 21

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   23 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 30
    LB     shift, and go to state 31

    $default  reduce using rule 10 (ExtDecList)


State 22

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 32
    SEMI   shift, and go to state 33
    LC     shift, and go to state 34

    CompSt  go to state 35


State 23

   18 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 18 (StructSpecifier)


State 24

   16 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 38


State 25

   13 ExtDecList: error ID .

    $default  reduce using rule 13 (ExtDecList)


State 26

   26 FunDec: error RP .

    $default  reduce using rule 26 (FunDec)


State 27

   12 ExtDecList: error RB .

    $default  reduce using rule 12 (ExtDecList)


State 28

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP

    error   shift, and go to state 39
    RP      shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 42
    ParamDec         go to state 43


State 29

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 30

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 44
    ID     shift, and go to state 45

    ExtDecList  go to state 46
    VarDec      go to state 21


State 31

   23 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 47


State 32

   33 CompSt: error . RC

    RC  shift, and go to state 48


State 33

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 34

   32 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 38


State 35

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 36

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI

    error  shift, and go to state 50
    ID     shift, and go to state 45

    VarDec   go to state 51
    DecList  go to state 52
    Dec      go to state 53


State 37

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 54


State 38

   43 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 44 (DefList)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    DefList          go to state 55
    Def              go to state 38


State 39

   29 VarList: error . RB
   30        | error . ID

    ID  shift, and go to state 56
    RB  shift, and go to state 57


State 40

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 41

   31 ParamDec: Specifier . VarDec

    ID  shift, and go to state 45

    VarDec  go to state 58


State 42

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 59


State 43

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 60

    $default  reduce using rule 28 (VarList)


State 44

   12 ExtDecList: error . RB
   13           | error . ID

    ID  shift, and go to state 25
    RB  shift, and go to state 27


State 45

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 46

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 47

   23 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 61


State 48

   33 CompSt: error RC .

    $default  reduce using rule 33 (CompSt)


State 49

   32 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 62
    INT     shift, and go to state 63
    FLOAT   shift, and go to state 64
    ID      shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68
    LC      shift, and go to state 34
    RETURN  shift, and go to state 69
    IF      shift, and go to state 70
    WHILE   shift, and go to state 71

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 72
    StmtList  go to state 73
    Stmt      go to state 74
    Exp       go to state 75


State 50

   46 Def: Specifier error . SEMI

    SEMI  shift, and go to state 76


State 51

   23 VarDec: VarDec . LB INT RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 77
    LB        shift, and go to state 31

    $default  reduce using rule 49 (Dec)


State 52

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 78


State 53

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 79

    $default  reduce using rule 47 (DecList)


State 54

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 55

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 56

   30 VarList: error ID .

    $default  reduce using rule 30 (VarList)


State 57

   29 VarList: error RB .

    $default  reduce using rule 29 (VarList)


State 58

   23 VarDec: VarDec . LB INT RB
   31 ParamDec: Specifier VarDec .

    LB  shift, and go to state 31

    $default  reduce using rule 31 (ParamDec)


State 59

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 60

   27 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 39
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 41
    StructSpecifier  go to state 8
    VarList          go to state 80
    ParamDec         go to state 43


State 61

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 62

   33 CompSt: error . RC
   42 Stmt: error . SEMI

    SEMI  shift, and go to state 81
    RC    shift, and go to state 48


State 63

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 64

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 65

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .
   71    | ID . LP error RP

    LP  shift, and go to state 82

    $default  reduce using rule 66 (Exp)


State 66

   60 Exp: MINUS . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 83


State 67

   61 Exp: NOT . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 84


State 68

   59 Exp: LP . Exp RP
   69    | LP . error RP

    error  shift, and go to state 85
    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 86


State 69

   38 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 87


State 70

   39 Stmt: IF . LP Exp RP Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 88


State 71

   41 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 89


State 72

   37 Stmt: CompSt .

    $default  reduce using rule 37 (Stmt)


State 73

   32 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 90


State 74

   34 StmtList: Stmt . StmtList

    error   shift, and go to state 62
    INT     shift, and go to state 63
    FLOAT   shift, and go to state 64
    ID      shift, and go to state 65
    MINUS   shift, and go to state 66
    NOT     shift, and go to state 67
    LP      shift, and go to state 68
    LC      shift, and go to state 34
    RETURN  shift, and go to state 69
    IF      shift, and go to state 70
    WHILE   shift, and go to state 71

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 72
    StmtList  go to state 91
    Stmt      go to state 74
    Exp       go to state 75


State 75

   36 Stmt: Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    RELOP     shift, and go to state 102


State 76

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


State 77

   50 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 103


State 78

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 79

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 45

    VarDec   go to state 51
    DecList  go to state 104
    Dec      go to state 53


State 80

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 81

   42 Stmt: error SEMI .

    $default  reduce using rule 42 (Stmt)


State 82

   62 Exp: ID LP . Args RP
   63    | ID LP . RP
   71    | ID LP . error RP

    error  shift, and go to state 105
    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68
    RP     shift, and go to state 106

    Exp   go to state 107
    Args  go to state 108


State 83

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   60    | MINUS Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 100
    LB   shift, and go to state 101

    $default  reduce using rule 60 (Exp)


State 84

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   61    | NOT Exp .
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 100
    LB   shift, and go to state 101

    $default  reduce using rule 61 (Exp)


State 85

   69 Exp: LP error . RP

    RP  shift, and go to state 109


State 86

   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | LP Exp . RP
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    RP        shift, and go to state 110
    LB        shift, and go to state 101
    RELOP     shift, and go to state 102


State 87

   38 Stmt: RETURN Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID
   70    | Exp . LB error RB

    SEMI      shift, and go to state 111
    ASSIGNOP  shift, and go to state 93
    PLUS      shift, and go to state 94
    MINUS     shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    DOT       shift, and go to state 100
    LB        shift, and go to state 101
    RELOP     shift, and go to state 102


State 88

   39 Stmt: IF LP . Exp RP Stmt
   40     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 112


State 89

   41 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 63
    FLOAT  shift, and go to state 64
    ID     shift, and go to state 65
    MINUS  shift, and go to state 66
    NOT    shift, and go to state 67
    LP     shift, and go to state 68

    Exp  go to state 113


State 90

   32 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 32 (CompSt)


State 91

   34 StmtList: Stmt StmtList .

    $default  reduce using rule 34 (StmtList)


State 92

   36 Stmt: Exp SEMI .

    $default  reduce using rule 36 (Stmt)


State 93
